--- a/MvcInvoice/Views/Home/Contact.cshtml
+++ b/MvcInvoice/Views/Home/Contact.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
 <address>
     One Microsoft Way<br />
